TP2/sites/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magasins-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mesbonlegumesbio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mesbonlegumesbio-service
            port:
              number: 80
  - host: mesbonslegumes.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mesbonslegumes-service
            port:
              number: 80
  - host: monbonlait.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monbonlait-service
            port:
              number: 80
